Function and UI Clean Up

--- a/src/Presentation/Nop.Web/Themes/X20/Views/Home/Index.cshtml
+++ b/src/Presentation/Nop.Web/Themes/X20/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_ColumnsOneFull.cshtml";
 }
 <div class="home-page">
+    @*bookmark*@
 @Html.Widget("home_page_top")
     <center>
         <img src="~/Themes/X20/Content/theme/images/newBACKGROUND.jpg" style="width:100%; margin: auto;" />
