--- a/src/Presentation/Nop.Web/Themes/X20/Views/Shared/_Root.cshtml
+++ b/src/Presentation/Nop.Web/Themes/X20/Views/Shared/_Root.cshtml
@@ -362,6 +362,8 @@
                             }
                             if (menuitem.submenu[0].title == "[CATEGORIES]")
                             {
+                                
+                                menuitem.submenu[0].title = "PRODUCTS";
                                 <div class="dropdown-menu @rightalign fadein">
                                     @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = currentCategoryId, currentProductId = currentProductId })
                                 </div>
@@ -396,10 +398,20 @@
     else
     {
         <li class="dropdown yamm-hover">
-            <a href="/" class="dropdown-toggle" data-toggle="dropdown">@T("Categories")<span class='plussign'></span></a>
+           
+            @*bookmark*@
+            
+            <a href="/" class="dropdown-toggle" data-toggle="dropdown" style="font-size:135%;">PRODUCTS ▾<span class='plussign'></span></a>
+            
+           
             <div class="dropdown-menu fadein">
                 @Html.Action("CategoryNavigation", "Catalog", new { currentCategoryId = currentCategoryId, currentProductId = currentProductId })
             </div>
+
+
+
+
+
         </li>
     }
     
