--- a/src/Presentation/Nop.Web/Views/Catalog/CategoryNavigation.cshtml
+++ b/src/Presentation/Nop.Web/Views/Catalog/CategoryNavigation.cshtml
@@ -51,7 +51,8 @@
 {
     <div class="block block-category-navigation">
         <div class="title">
-            <strong>@T("Categories")</strong>
+            @*<strong>@T("Products")</strong>*@
+            @*bookmark*@
         </div>
         <div class="listbox">
             <ul class="list">
