--- a/src/Presentation/Nop.Web/Views/Shared/_Root.Head.cshtml
+++ b/src/Presentation/Nop.Web/Views/Shared/_Root.Head.cshtml
@@ -48,12 +48,12 @@
     <!--Copyright (c) 2008-2014-->
 </head>
 <body>
-    <p> FOOOOOOOOOOOOOOOO</p>
+    @*<p> FOOOOOOOOOOOOOOOO</p>*@
     @RenderBody()
-    <p> FOOOOOOOOOOOOOOOO</p>
+    @*<p> FOOOOOOOOOOOOOOOO</p>*@
     @Html.NopCssFiles(this.Url, ResourceLocation.Foot)
     @Html.NopScripts(this.Url, ResourceLocation.Foot)
-    <p> FOOOOOOOOOOOOOOOO</p>
+    @*<p> FOOOOOOOOOOOOOOOO</p>*@
 
 </body>
 </html>
