--- a/src/Presentation/Nop.Web/Administration/Content/styles.css
+++ b/src/Presentation/Nop.Web/Administration/Content/styles.css
@@ -70,12 +70,15 @@ label{padding-left:3px;}
 .master-wrapper-content{}
 /* MASTER HEADER */
 .header{height:70px;width:100%;background:url(images/admin-header-bg.gif) repeat-x;position:relative;}
-.header .logo{background:url(images/logo.gif);display:block;width:340px;height:70px;text-decoration:none;}
+
+.header .logo{background:url(images/logo.png);display:block;width:250px;height:70px;text-decoration:none;}
+
+
 .header .languageselector{position:absolute;right:400px;top:7px;text-align:right;}
 .header .links{position:absolute;right:10px;top:7px;text-align:right;}
 a img{border:0;}
 .header .links .separator{color:#FFF;padding:0 3px;}
-.header .login-info{position:absolute;right:5px;top:35px;text-align:right;color:#e7e7e7;font-size:10px;}
+.header .login-info{position:absolute;right:5px;top:35px;text-align:right;color:#1d1f23;font-size:10px;}/*#e7e7e7*/
 .header .login-info .a{color:#009FFF;text-decoration:none;font-weight:700;}
 .header .version{position:absolute;right:5px;top:55px;text-align:right;color:#e7e7e7;font-size:10px;}
 /* MASTER HEADER MENU */
