--- a/src/Presentation/Nop.Web/Themes/X20/Views/Topic/TopicBlock.cshtml
+++ b/src/Presentation/Nop.Web/Themes/X20/Views/Topic/TopicBlock.cshtml
@@ -186,11 +186,20 @@ else
         @if (!String.IsNullOrEmpty(Model.Title))
         {
             <div class="topic-html-content-title">
-                <h2 class="topic-html-content-header">Welcome to Jungle Boy Gear
-                   @* @Model.Title*@
-                
-                </h2>
+               
+                <h1 class="topic-html-content-header" style="font-size: 260%; font-weight:200; color: #16664a; margin-top: 40px;
+    margin-bottom: 30px; ">Your hunt for quality outdoor equipment is over.</h1>
 
+                <hr style="border-width: 1.5px; margin-left: 10%;margin-right: 10%;" >
+                
+
+
+                <h2 class="topic-html-content-header" style="margin-top: 25px;
+    margin-bottom: 35px; ">
+                    Welcome to Jungle Boy Gear
+                    @* @Model.Title*@
+
+                </h2>
             </div>
         }
         <div class="topic-html-content-body">
